objects/ASI_MFM_Payment_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Status_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>change status to Invalid</description>
        <label>Status Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Sync_Time__c</fullName>
        <label>Sys_Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TH_Tax_Type__c</fullName>
        <label>Tax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SVAT (7%)</fullName>
                    <default>true</default>
                    <label>SVAT (7%)</label>
                </value>
                <value>
                    <fullName>IVAT (7%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Adjustment__c</fullName>
        <label>Tax Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Amount__c</fullName>
        <label>Deductable Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items (Tax Code)</relationshipLabel>
        <relationshipName>Payment_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Confirmed_Cost__c</fullName>
        <formula>IF(CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;) , 
(
IF( ASI_MFM_Currency__c ==&apos;KRW&apos;,(
IF(  ISPICKVAL( ASI_MFM_Tax_Explanation_Code__c ,&apos;V&apos;),  
ASI_MFM_Payment_Amount__c ,  

 CASE(ASI_MFM_Tax_Code__r.Name, 
&apos;JG11&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JG10&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JF11&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),
&apos;JF10&apos;,ASI_MFM_Payment_Amount__c * (1+ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c),

ASI_MFM_Payment_Amount__c)
)
),ASI_MFM_Payment_Amount__c
)
), ASI_MFM_Payment_Amount__c )</formula>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Explanation_Code__c</fullName>
        <label>Tax Explanation Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12%</fullName>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax__c</fullName>
        <formula>IF(CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_KR&apos;) , 
 ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c 
, ASI_MFM_Payment__r.ASI_MFM_Tax_Code__r.ASI_MFM_VAT_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Default Provision</fullName>
                </value>
                <value>
                    <fullName>Write-off</fullName>
                </value>
                <value>
                    <fullName>Company Transfer</fullName>
                    <isActive>false</isActive>
                    <label>Company Transfer</label>
                </value>
                <value>
                    <fullName>Default_Provision</fullName>
                    <isActive>false</isActive>
                    <label>Default_Provision</label>
                </value>
                <value>
                    <fullName>write off</fullName>
                    <isActive>false</isActive>
                    <label>write off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Adjustment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ASI_MFM_VAT_Adjustment__c</description>
        <label>VAT Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_VAT_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Invoice</label>
        <referenceTo>ASI_MFM_VAT_Invoice__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Verify_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verify by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PaymentLine_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Voucher_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Web_Service_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Service Failed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Where_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR Payment Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Venue (KR), Wholesaler (KR)</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Withholding_Tax_Amount__c</fullName>
        <label>Withholding Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Withholding_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Withholding Tax</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Payment Line Items</relationshipLabel>
        <relationshipName>Payment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Line Item</label>
    <nameField>
        <displayFormat>PYL{000000}</displayFormat>
        <label>Payment Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP HK Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_SG_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP SG Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP TH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_TW_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CAP TW Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Payment_Line_Item</fullName>
        <active>true</active>
        <label>CN Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_Payment_Line_Item</fullName>
        <active>true</active>
        <label>GF Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_HK_Payment_Line_Item</fullName>
        <active>true</active>
        <label>HK Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_JP_Payment_Line_Item</fullName>
        <active>true</active>
        <label>JP Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Payment_Line_Item</fullName>
        <active>true</active>
        <label>KR Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_Payment_Line_Item</fullName>
        <active>true</active>
        <label>MY Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_PH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>PH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_Payment_Line_Item</fullName>
        <active>true</active>
        <label>RM Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SC_Payment_Line_Item</fullName>
        <active>true</active>
        <label>SC Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_SG_Payment_Line_Item</fullName>
        <active>true</active>
        <label>SG Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TH_Payment_Line_Item</fullName>
        <active>true</active>
        <label>TH Payment Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Payment_Line_Item</fullName>
        <active>true</active>
        <label>TW Payment Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_MFM_CAP_Accrual_Payment_BU_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_CAP_Payment_Line_Item&quot;),
 CONTAINS( ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.RecordType.DeveloperName , &quot;ASI_MFM_CAP_Accrual&quot;),
NOT( ASI_MFM_BU__r.ASI_MFM_Available_for_Accrual_PO_Payment__c ),
 ISPICKVAL(  ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c , &quot;OPEX&quot;) 
)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_BU__c</errorDisplayField>
        <errorMessage>Please select OPEX Suspense BU for OPEX Payment on Accrual PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Check_CAPEX_OPEX_AP_Code</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CAP&apos;) 
&amp;&amp; ((ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;CAPEX&apos;)&amp;&amp;  ASI_MFM_AP_Code__r.ASI_MFM_OPEX__c = TRUE) || (ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;OPEX&apos;)&amp;&amp; ASI_MFM_AP_Code__r.ASI_MFM_OPEX__c = FALSE )) 
&amp;&amp; NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_AP_Code__c</errorDisplayField>
        <errorMessage>For CAPEX payment, please select a CAPEX AP Code. For OPEX payment, please select an OPEX AP Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_Check_CAPEX_OPEX_Type</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_MFM_CAP&apos;) &amp;&amp;
((ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;CAPEX&apos;)&amp;&amp; ASI_MFM_BU__r.ASI_MFM_OPEX__c = TRUE ) 
	|| (ISPICKVAL(ASI_MFM_Payment__r.ASI_MFM_Payment_Type__c, &apos;OPEX&apos;)&amp;&amp; ASI_MFM_BU__r.ASI_MFM_OPEX__c = FALSE )) &amp;&amp;
NOT(CONTAINS($Profile.Name, &quot;Administrator&quot;)) &amp;&amp; not(CONTAINS( $User.Username , &quot;soa&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_BU__c</errorDisplayField>
        <errorMessage>For CAPEX payment, please select a CAPEX BU Code. For OPEX payment, please select an OPEX BU Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_HK_BU_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS(RecordType.DeveloperName, &quot;ASI_MFM_CAP_Payment_Line_Item Layout&quot;),
 ISBLANK( ASI_MFM_BU__c ),
 ISBLANK( ASI_MFM_BU_Allocation__c )
)</errorConditionFormula>
        <errorMessage>Please select either BU Code or BU Allocation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CAP_SG_PaymentAmount_Input</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName =&apos;ASI_MFM_CAP_SG_Payment_Line_Item&apos;  
&amp;&amp; NOT(ISPICKVAL(ASI_MFM_Payment_Item_Type__c, &apos;VAP&apos;))
&amp;&amp; (ASI_MFM_Payment_Amount__c = 0  || ISBLANK(ASI_MFM_Payment_Amount__c))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Payment_Amount__c</errorDisplayField>
        <errorMessage>Please input Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_CN_Check_Benchmark</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;), !ASI_MFM_PO__r.ASI_MFM_PMO_Finished__c, !ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c,
NOT(CONTAINS( $Profile.Name,&quot;System Admin&quot;))
)</errorConditionFormula>
        <errorMessage>PMO need to submit Benchmark report summary to PO before processing payment for image outlet/Out Channel Event/In Channel Event PO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Check_Against_PO_Receipt_Amount</fullName>
        <active>false</active>
        <description>MFM CN Validation: payment amount cannot be larger than po receipt amount (exclude Pre-payment)</description>
        <errorConditionFormula>AND( NOT(ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c), 
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;),  ( ASI_MFM_POL_Receipt_Amount_Incl_Tax__c +1 ) &lt;   ASI_MFM_Payment_Amount__c   )</errorConditionFormula>
        <errorMessage>Payment amount cannot be greater than PO receipt amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Check_PO_Receipt_but_no_paid</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
CONTAINS( RecordType.DeveloperName, &apos;ASI_MFM_CN&apos;), ASI_MFM_Receipt_but_no_Paid__c &lt;  ASI_MFM_Payment_Amount_Net_of_Tax__c )</errorConditionFormula>
        <errorDisplayField>ASI_MFM_A_C_Code__c</errorDisplayField>
        <errorMessage>Payment amount cannot be greater than PO receipt but no paid amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Finance_Voucher_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_TH&quot;), ASI_MFM_Voucher_Created__c =true, ASI_MFM_Payment_Line_Item_Finance_Verify__c =false)</errorConditionFormula>
        <errorMessage>Voucher has created. You cannot clear Finance Verify flag</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_GF_DistributorPrePayValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_GF&quot;),
 ASI_MFM_Payment__r.ASI_MFM_Pre_payment__c ,
 NOT(ISBLANK(  ASI_MFM_PO_Line_Item__r.ASI_MFM_Distributor_Amount__c ))
)</errorConditionFormula>
        <errorMessage>Payment for Distributor cannot be made in Pre-Payment, please receipt the PO before making payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_GF_MMIPaymentValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
 CONTAINS( RecordType.DeveloperName , &quot;ASI_MFM_GF&quot;),
 TEXT(ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.ASI_MFM_PO_Type__c) != &quot;Normal&quot;,
 TEXT(ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.ASI_MFM_PO_Type__c) != &quot;Event FOC&quot;,
 ASI_MFM_Payment_Amount_Distributor__c &gt; 0 
)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Payment_Amount_Distributor__c</errorDisplayField>
        <errorMessage>Distributor Payment is only for [Norma] or [Event FOC] PO Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_KR_TaxCodeValidation</fullName>
        <active>true</active>
        <description>!CONTAINS($Profile.Name,&apos;Administrator&apos;)</description>
        <errorConditionFormula>AND( ASI_MFM_Payment__r.ASI_MFM_Finance_Verify_LineNumber__c &gt;0, ASI_MFM_Payment__r.ASI_MFM_Tax_Code__c  != ASI_MFM_Tax_Code__c ,CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_KR&quot;),NOT(INCLUDES( $User.BypassTriggers__c , &quot;ASI_MFM_KR_ChangingTaxCode&quot;)))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Tax_Code__c</errorDisplayField>
        <errorMessage>There exist some payment line have been verified, in same header, you cannot change tax code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Lock_HK_PYL</fullName>
        <active>true</active>
        <errorConditionFormula>(  ASI_MFM_Payment__r.RecordType.DeveloperName  = &apos;ASI_MFM_HK_Payment_Read_Only&apos;) &amp;&amp; (ASI_MFM_Sys_Sync_Time__c =  PRIORVALUE(ASI_MFM_Sys_Sync_Time__c) )</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You can NOT modify the Payment Line under an approved Payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Lock_TW_PYL</fullName>
        <active>false</active>
        <errorConditionFormula>(  ASI_MFM_Payment__r.RecordType.DeveloperName  = &apos;ASI_MFM_TW_Payment_Read_Only&apos;) &amp;&amp; !CONTAINS($Profile.Name, &apos;ASI_MFM_TW Power&apos;) &amp;&amp; (ASI_MFM_Sys_Sync_Time__c =  PRIORVALUE(ASI_MFM_Sys_Sync_Time__c) )</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You can NOT modify the Payment Line under an approved Payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Negative_Amount_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_SG&quot;), ASI_MFM_Payment_Amount__c  &lt; 0)</errorConditionFormula>
        <errorMessage>Payment Amount has to be positive value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_POSM_Deposit_Amount_Check</fullName>
        <active>false</active>
        <description>Once POSM: Deposit	tick, the payment line amount can not greater or equal to po line amount</description>
        <errorConditionFormula>AND( ASI_MFM_PO_Line_Item__r.ASI_MFM_Amount__c  &gt;=  ASI_MFM_Payment_Amount__c ,ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c, OR(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_MY&quot;),CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_TH&quot;),CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_SG&quot;)))</errorConditionFormula>
        <errorMessage>Once choose POSM: Deposit, you can not use all of  PO Line Amount. Please modify your 	 Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_POSM_Deposit_Check</fullName>
        <active>true</active>
        <description>Once POSM: Deposit	tick, can not tick ASI_MFM_Complete_POL__c</description>
        <errorConditionFormula>AND(ASI_MFM_Complete_POL__c,ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c, OR(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_TH&quot;),CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_SG&quot;)))</errorConditionFormula>
        <errorMessage>Can not complete PO line, because you choose  POSM: Deposit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Partially_Payment_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_SG&quot;) , AND( ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c  =  False ,  ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c =  False ,
 ASI_MFM_Payment__r.ASI_MFM_Other_than_POSM__c =  False ,  ASI_MFM_Complete_POL__c=  False ) , ASI_MFM_Payment_Amount__c &lt;  ASI_MFM_PO_Line_Item__r.ASI_MFM_Remaining_Balance__c   )</errorConditionFormula>
        <errorMessage>Please check &apos;Complete POL&apos;,  &apos;POSM: Deposit&apos; or &apos;Other than POSM&apos; for partial payment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_PaymentLine_Invoice_Num_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Profile.Name &lt;&gt; &apos;ASI SOA System Administrator&apos;, LEN( ASI_MFM_Invoice_Number__c ) &gt; 25)</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Invoice_Number__c</errorDisplayField>
        <errorMessage>Maximum length of Invoice Number allowed is 25 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Require_Invoice_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(NOT(RecordType.DeveloperName = &apos;ASI_MFM_CN_Payment_Line_Item&apos;)),NOT(CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CAP&apos;)),ISBLANK( ASI_MFM_Invoice_Date__c ))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Invoice_Date__c</errorDisplayField>
        <errorMessage>Invoice date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Require_Invoice_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(RecordType.DeveloperName = &apos;ASI_MFM_CN_Payment_Line_Item&apos;),NOT(CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_CAP&apos;)),NOT(CONTAINS(RecordType.DeveloperName,&apos;ASI_MFM_SC&apos;)),ISBLANK( ASI_MFM_Invoice_Number__c ))</errorConditionFormula>
        <errorDisplayField>ASI_MFM_Invoice_Number__c</errorDisplayField>
        <errorMessage>Invoice number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_SG_Block_If_no_PO_Balance</fullName>
        <active>false</active>
        <description>For MFM SG, block creating payment if PO balance equal to 0</description>
        <errorConditionFormula>AND( 
CONTAINS(RecordType.DeveloperName, &quot;ASI_MFM_SG_&quot;), 
ASI_MFM_PO__r.ASI_MFM_PO_Balance__c = 0 
)</errorConditionFormula>
        <errorMessage>PO Balance is equal to 0. Cannot create Payment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_Supplier_Currency_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
	NOT(CONTAINS( $Profile.Name,&quot;System Admin&quot;)),
	(ASI_MFM_Payment__r.ASI_MFM_Supplier_Name__r.ASI_MFM_Customer_Supplier_Number__c  &lt;&gt;  ASI_MFM_PO_Line_Item__r.ASI_MFM_PO_Supplier_Number__c),
	!ISBLANK(ASI_MFM_PO_Line_Item__r.ASI_MFM_PO_Supplier_Number__c),
	AND (NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_CAP&quot;)), NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_KR&quot;)), NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_GF&quot;)), NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_SG&quot;)), NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_TH&quot;)),NOT(CONTAINS(RecordType.DeveloperName , &quot;ASI_MFM_MY&quot;)))
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>You can only pay the PO with the same supplier</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_TH_Deposit_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_TH&quot;) , AND(
OR( 
ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c = TRUE,
ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c = TRUE
), 
ASI_MFM_PO_Line_Item__r.ASI_MFM_Partial_Payment__c =TRUE ))</errorConditionFormula>
        <errorMessage>PO Line has Partial Payment. You cannot create POSM Deposit / Balance on it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_TH_Partial_Payment_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_TH&quot;) , AND(  
ASI_MFM_Partial_Payment__c = TRUE,  ASI_MFM_PO_Line_Item__r.ASI_MFM_POSM_Deposit__c =TRUE ))</errorConditionFormula>
        <errorMessage>PO Line has deposit payment. You cannot create Partial Payment on it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_MFM_TH_Partially_Payment_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName ,&quot;ASI_MFM_TH&quot;) , AND( ASI_MFM_Payment__r.ASI_MFM_POSM_Deposit__c  =  False ,  ASI_MFM_Payment__r.ASI_MFM_POSM_Balance__c =  False ,
 ASI_MFM_Payment__r.ASI_MFM_Other_than_POSM__c =  False ,
 ASI_MFM_Payment__r.ASI_MFM_Partial_Payment__c = False,  ASI_MFM_Complete_POL__c=  False ) , ASI_MFM_Payment_Amount__c &lt;  ASI_MFM_PO_Line_Item__r.ASI_MFM_Remaining_Balance__c   )</errorConditionFormula>
        <errorMessage>Please check &apos;Complete POL&apos;,  &apos;POSM: Deposit&apos;  or &apos;Partial Payment&apos; for partial payment.</errorMessage>
    </validationRules>
</CustomObject>